envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9090
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/fhir"
                          route:
                            cluster: hapi-fhir
                http_filters:
                  # 1️⃣ JWT Auth Filter
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak_provider:
                          issuer: "http://localhost:8081/realms/fhir-realm"
                          audiences: ["account"]
                          remote_jwks:
                            http_uri:
                              uri: "http://keycloak:8080/realms/fhir-realm/protocol/openid-connect/certs"
                              cluster: keycloak
                              timeout: 5s
                          forward: true
                      rules:
                        - match:
                            prefix: "/fhir"
                          requires:
                            provider_name: keycloak_provider
                  # 2️⃣ Router Filter (obligatorio)
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:
    - name: hapi-fhir
      connect_timeout: 5s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: hapi-fhir
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: hapi-fhir
                      port_value: 8080
    - name: keycloak
      connect_timeout: 5s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080
